--- a/style.css
+++ b/style.css
@@ -4,3 +4,15 @@
 img{
   object-fit: fill;
 }
+
+#smaller{
+  font-size: 1.3vw;
+}
+
+#smaller_c{
+  font-size: 2vw;
+}
+
+smaller{
+  font-size: 1.5vw;
+}
